post(조회, 좋아요, 삭제)
